force-app/main/default/objects/Instrument_Master__c/Instrument_Master__c.object-meta.xml
<CustomObject>
    <description>This object is to store the combination of the instruments based on which the Instrument Category field on opportunity will update</description>
    <label>Instrument Master</label>
    <nameField>
        <displayFormat>IMN-{0000}</displayFormat>
        <label>Instrument Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instrument Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>