force-app/main/default/objects/Instrument_Master__c/fields/Instrument_Category__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Category__c</fullName>
    <label>Instrument Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTC/AP</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
            <value>
                <fullName>Other-SF</fullName>
            </value>
            <value>
                <fullName>BLR</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Certificate of Deposit</fullName>
            </value>
            <value>
                <fullName>Commercial Paper</fullName>
            </value>
            <value>
                <fullName>Short term debt</fullName>
            </value>
            <value>
                <fullName>NCD/Debt</fullName>
            </value>
            <value>
                <fullName>Perpetual Debt</fullName>
            </value>
            <value>
                <fullName>Market Linked Debenture</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Sub Debt</fullName>
            </value>
            <value>
                <fullName>Borrowing programme</fullName>
            </value>
            <value>
                <fullName>Mutual Fund Rating</fullName>
            </value>
            <value>
                <fullName>Monitoring Activity</fullName>
            </value>
            <value>
                <fullName>Issuer Rating</fullName>
            </value>
            <value>
                <fullName>Alternative investment Fund</fullName>
            </value>
            <value>
                <fullName>RP - Independent Credit Evaluation (ICE)</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>BLR/CP</fullName>
            </value>
            <value>
                <fullName>Short Term Borrowing Programme</fullName>
            </value>
            <value>
                <fullName>CP/CD/STD</fullName>
            </value>
            <value>
                <fullName>Expected Loss Rating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>