force-app/main/default/objects/Instrument_Master__c/fields/Instrument_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Type_2__c</fullName>
    <label>Instrument Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_Instrument_Type_2</valueSetName>
    </valueSet>
</CustomField>