force-app/main/default/objects/Instrument_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Instrument_Type_1__c</columns>
    <columns>Instrument_Type_2__c</columns>
    <columns>Instrument_Type_3__c</columns>
    <columns>Instrument_Type_4__c</columns>
    <columns>Instrument_Category__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>